# ade-platform

./: .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  monorepo-ci.yml  release.yml
.husky/: commit-msg  pre-commit
cli/: README.md  package.json  tsconfig.json  vitest.config.ts
cli/config/: stack-registry.json  stack-registry.schema.json
cli/src/: index.ts
cli/src/commands/: scaffold.ts  validate.ts
cli/src/core/: registry.ts  scaffolder.ts  templates.ts
cli/src/types/: index.ts
cli/src/utils/: package.ts
cli/templates/express/: Dockerfile  Makefile  package.json
cli/templates/fastapi/: Dockerfile  Makefile  pyproject.toml  requirements.txt
cli/templates/fastapi/app/: main.py
cli/templates/go-fiber/: Dockerfile
cli/tests/: registry.test.ts  scaffolder.test.ts  validator.test.ts
cli/utils/: resolver.js
docs/: README.md  features.md  performance.md  project-structure.md
docs/api/: cli-commands.md
docs/development/: setup.md  testing.md  vscode-extension.md
docs/guides/: ade-core-installation.md  vscode-extension-deployment.md  windows-quick-start.md
example-project/identity/auth-api/: .env.example  (+2 more)
scripts/: validate-best-practices.sh  validate-domain-layout.sh
tools/ade-core/: Cargo.toml
tools/phd-core/: Cargo.toml
vscode-extension/: LICENSE.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  preview.ts
vscode-extension/tests/: extension.test.ts  preview.test.ts
(+6 files in other folders)
