[project]
name = "{{serviceName}}"
version = "1.0.0"
description = "{{Domain}} domain - {{ServiceName}} service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "gunicorn==21.2.0",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "uvloop==0.19.0",
    "orjson==3.9.13",
    "ujson==5.9.0",
    "python-multipart==0.0.9",
    "prometheus-fastapi-instrumentator==6.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "S", "A", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.uv]
# Use uv for package management
package-manager = "uv"